# statsd-client

./: .gitignore  .travis.yml  LICENSE  README.md  listener.rb  stack.yaml  statsd-client.cabal
Network/: Statsd.hs
Network/Statsd/: Cluster.hs  Collector.hs
script/: listen  listen.rb
src/Network/: DogStatsd.hs  Statsd.hs  UdpClient.hs
src/Network/Statsd/: Cluster.hs  UdpClient.hs
statsd-client.hsproj/: Statsd.hs  _Statsd.hsplay  statsd-client.cabal
