name: statsd-client
version: 1.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: BSD
copyright: © Keith Duncan
maintainer: Keith Duncan
stability: experimental
homepage: https://github.com/keithduncan/statsd-client
bug-reports: https://github.com/keithduncan/statsd-client/issues
synopsis: Statsd UDP client
category: Network
author: Keith Duncan

library
  exposed-modules: Network.Statsd Network.Statsd.Cluster
