name: statsd-client
version: 1.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: BSD
copyright: © Keith Duncan
maintainer: Keith Duncan
stability: experimental
homepage: https://github.com/keithduncan/statsd-client
bug-reports: https://github.com/keithduncan/statsd-client/issues
synopsis: Statsd UDP client
category: Network
author: Keith Duncan

library
  exposed-modules: Network.Statsd Network.Statsd.Cluster
  build-depends: base >= 4.8.1,
                 old-time >= 1.1.0.3,
                 random >= 1.1,
                 bytestring >= 0.10.6,
                 byteable >= 0.1.1,
                 cryptohash >= 0.11.6,
                 network >= 2.6.2.1,
                 digest-pure >= 0.0.3,
                 time-units >= 1.0.0
